BuildTarget.getCellRelativeBasePath (3/N)
Summary: Random easy changes

Reviewed By: bobyangyf

shipit-source-id: deadac3e45